--- a/templates/list_files.html
+++ b/templates/list_files.html
@@ -18,6 +18,6 @@
         {% endfor %}
     </ul>
     <br>
-    <a href="/">Upload another file</a>
+    <a href="/upload">Upload another file</a>
 </body>
 </html>
