--- a/templates/upload.html
+++ b/templates/upload.html
@@ -28,5 +28,6 @@
         <input type="file" name="file" required>
         <input type="submit" value="アップロード">
     </form>
+    <a class="list-button" href="/list">ファイルリストへ</a>
 </body>
 </html>
